[package]
name = "wasm4-common"
version = "0.0.0"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "ISC"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "functionality which used from proc_macro and regular libraries for WASM-4 bindings"
keywords = ["wasm-4", "wasm4"]
edition = "2021"

[dependencies]
