[package]
name = "wasm4-common"
version = "0.1.4"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "Functionality used from proc_macro and regular libraries for WASM-4 bindings"
keywords = ["wasm-4", "wasm4"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
targets = []
