[package]
name = "wasm4-impl"
version = "0.1.1"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "Procedural macros implementation for WASM-4 bindings"
keywords = ["wasm-4", "wasm4"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.52"
bitvec = "1.0.0"
heapless = "0.7.9"
image = "0.23.14"
once_cell = "1.9.0"
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["extra-traits"] }

[dependencies.wasm4-common]
path = "../wasm4-common"
version = "^0.1.0"
