[package]
name = "wasm4-sys"
version = "0.0.1"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "ISC"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "Raw WASM-4 bindings for Rust, used internally wasm4-rs"
keywords = ["wasm-4", "wasm4"]
categories = ["external-ffi-bindings", "wasm"]
edition = "2021"
