[package]
name = "wasm4-sys"
version = "0.1.3"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "Raw WASM-4 bindings for Rust, used internally wasm4-rs"
keywords = ["wasm-4", "wasm4"]
categories = ["external-ffi-bindings", "wasm"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
targets = []
