[package]
name = "wasm4"
version = "0.0.3"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "ISC"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "WASM-4 bindings for Rust"
keywords = ["wasm-4", "wasm4"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"
edition = "2021"

[dependencies]
bitflags = "1.3.2"

[dependencies.wasm4-sys]
path = "../wasm4-sys"
version = "^0.1.0"
