[package]
name = "wasm4"
version = "0.1.2"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
description = "WASM-4 bindings for Rust"
keywords = ["wasm-4", "wasm4"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"
edition = "2021"

[features]
std = []
include-sprites = ["dep:wasm4-impl"]

[dependencies]
bitflags = "1.3.2"

[dependencies.wasm4-sys]
path = "../wasm4-sys"
version = "0.1.1"

[dependencies.wasm4-common]
path = "../wasm4-common"
version = "0.1.2"

[dependencies.wasm4-impl]
path = "../wasm4-impl"
version = "0.1.2"
optional = true

[[example]]
name = "sans"
required-features = ["include-sprites"]

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
